Avoid Main public menu right overflows when many options accumulate

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -356,3 +356,10 @@ a, a:focus, a:hover, .card__link, .card__link:hover, .author-data .author__name{
   .main-nav .main-nav__link{ border-right: none; }
   .topbar__user__login a{ color: $white; }
 }
+
+
+/* The Main public menu overflows right when many options accumulate */
+.main-nav__link a {
+  padding-left: 1em;
+  padding-right: 1em;
+}
